[gd_scene load_steps=11 format=3 uid="uid://dpfi23xga4gjc"]

[ext_resource type="PackedScene" uid="uid://dyj71l0mqpwe8" path="res://scenes/player.tscn" id="1_2iwrv"]
[ext_resource type="Script" path="res://scripts/world.gd" id="1_d27v5"]
[ext_resource type="Texture2D" uid="uid://dbrmk3tffsnsl" path="res://PNG/Spritesheet/allSprites_retina.png" id="2_do0qb"]
[ext_resource type="Script" path="res://scripts/wall.gd" id="3_heb4w"]
[ext_resource type="PackedScene" uid="uid://bsn0fhft781wv" path="res://scenes/slime_enemy.tscn" id="4_5kqvr"]
[ext_resource type="Script" path="res://scripts/SlimeSpawner.gd" id="5_o7ynb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v6263"]
texture = ExtResource("2_do0qb")
texture_region_size = Vector2i(128, 128)
2:0/0 = 0
3:2/0 = 0
4:0/0 = 0
4:1/0 = 0
5:1/0 = 0
4:2/0 = 0
3:3/0 = 0
4:4/0 = 0
3:4/0 = 0
4:3/0 = 0
4:5/0 = 0
4:6/0 = 0
3:6/0 = 0
3:7/0 = 0
4:7/0 = 0
1:7/0 = 0
1:6/0 = 0
0:6/0 = 0
0:5/0 = 0
1:5/0 = 0
0:4/0 = 0
0:3/0 = 0
1:3/0 = 0
1:2/0 = 0
0:2/0 = 0
0:1/0 = 0
0:0/0 = 0
1:1/0 = 0
2:2/0 = 0
3:1/0 = 0
3:0/0 = 0
2:3/0 = 0
2:4/0 = 0
2:5/0 = 0
2:6/0 = 0
2:7/0 = 0
3:5/0 = 0
0:7/0 = 0
1:0/0 = 0
2:1/0 = 0
1:4/0 = 0
5:0/0 = 0

[sub_resource type="TileSet" id="TileSet_fhe3k"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_v6263")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8apu8"]
size = Vector2(15, 1100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4edbg"]
size = Vector2(1300, 15)

[node name="World" type="Node2D"]
script = ExtResource("1_d27v5")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_fhe3k")
format = 2
layer_0/tile_data = PackedInt32Array(0, 196608, 2, 65536, 196608, 2, 65537, 196608, 2, 65538, 196608, 2, 65539, 196608, 2, 131075, 196608, 2, 131074, 196608, 2, 131073, 196608, 2, 131072, 196608, 2, 1, 196608, 2, 2, 196608, 2, 196610, 196608, 2, 262146, 262144, 1, 3, 196608, 2, 196611, 196608, 2, 262147, 262144, 1, 4, 196608, 2, 65540, 196608, 2, 131076, 196608, 2, 196612, 196608, 2, 262148, 262144, 1, 5, 65536, 7, 65541, 65536, 7, 131077, 65536, 7, 196613, 65536, 7, 262149, 0, 0, 6, 196608, 7, 65542, 196608, 2, 131078, 196608, 2, 196614, 196608, 2, 262150, 262144, 1, 196608, 196608, 2, 262144, 262144, 1, 196609, 196608, 2, 262145, 262144, 1, -1, 65536, 7, 65535, 65536, 7, 131071, 65536, 7, 196607, 65536, 7, 262143, 65536, 7, 327679, 0, 0, -65536, 196608, 2, -65535, 196608, 2, -65534, 196608, 2, -65533, 196608, 2, -65532, 196608, 2, -65531, 65536, 7, -65530, 196608, 7, -65538, 196608, 2, -2, 196608, 2, 65534, 196608, 2, 131070, 196608, 2, 196606, 196608, 2, 262142, 196608, 2, 327678, 262144, 1, -65537, 65536, 7, -131072, 196608, 7, -131071, 196608, 7, -131070, 196608, 7, -131069, 196608, 7, -131068, 196608, 7, -131067, 65536, 7, -131066, 196608, 7, -65539, 196608, 2, -3, 196608, 2, 65533, 196608, 2, 131069, 196608, 2, 196605, 196608, 2, 262141, 196608, 2, 327677, 262144, 1, 393213, 131072, 7, 393214, 131072, 7, 393215, 131072, 4, 327680, 131072, 7, 327681, 131072, 7, 327682, 131072, 3, 327683, 131072, 7, 327685, 131072, 4, 327686, 131072, 7, 327684, 131072, 7, 458749, 131072, 0, -131073, 65536, 7, -196608, 196608, 2, -196607, 196608, 2, -196606, 196608, 2, -196605, 196608, 2, -196604, 196608, 2, -196603, 65536, 7, -196602, 196608, 7, -131075, 196608, 2, -131074, 196608, 2, -131065, 65536, 7, -65529, 65536, 7, 7, 65536, 3, 65543, 196608, 2, 131079, 196608, 2, 196615, 196608, 2, -131064, 196608, 7, -65528, 196608, 7, 8, 0, 6, 65544, 196608, 2, 131080, 196608, 2, 196616, 196608, 2, -131063, 196608, 2, -65527, 196608, 7, 9, 0, 6, 65545, 196608, 2, 131081, 196608, 2, 196617, 196608, 2, -131062, 65536, 7, -65526, 65536, 7, 10, 262144, 4, 65546, 65536, 7, 131082, 65536, 7, 196618, 65536, 7, -131061, 196608, 2, -65525, 196608, 2, 11, 196608, 2, 65547, 196608, 2, 131083, 196608, 2, 196619, 196608, 2, -131060, 196608, 2, -65524, 196608, 2, 12, 196608, 2, 65548, 196608, 2, 131084, 196608, 2, 196620, 196608, 2, 262151, 262144, 1, 262152, 262144, 1, 262153, 262144, 1, 262154, 0, 0, 262155, 262144, 1, 262156, 262144, 1, -196601, 65536, 7, -196600, 196608, 7, -196599, 196608, 2, -196598, 0, 5, -196597, 0, 6, -196596, 0, 6, -131059, 196608, 2, -65523, 196608, 2, 13, 196608, 2, 65549, 196608, 2, 131085, 196608, 2, 196621, 196608, 2, 262157, 262144, 1, -196595, 0, 6, 327687, 131072, 7, 327688, 131072, 7, 393224, 131072, 1, 393225, 131072, 1, 393223, 131072, 1, 393226, 131072, 1, 393227, 131072, 1, 393228, 131072, 1, 393229, 131072, 1, 327693, 131072, 7, 327692, 131072, 7, 327691, 131072, 7, 327690, 131072, 4, 327689, 131072, 7, 524285, 131072, 1, 589821, 131072, 1, 655357, 131072, 1, 720893, 131072, 1, 786429, 131072, 1, 851965, 131072, 1, 458759, 131072, 1, 524295, 131072, 1, 589831, 131072, 1, 655367, 131072, 1, 720903, 131072, 7, 786439, 131072, 1, 458760, 131072, 1, 524296, 131072, 1, 589832, 131072, 1, 655368, 131072, 1, 720904, 131072, 7, 786440, 131072, 1, 458761, 131072, 1, 524297, 131072, 1, 589833, 131072, 1, 655369, 131072, 1, 720905, 131072, 7, 786441, 131072, 1, 458762, 131072, 1, 524298, 131072, 1, 589834, 131072, 1, 655370, 131072, 1, 720906, 131072, 7, 786442, 131072, 1, 458763, 131072, 1, 524299, 131072, 1, 589835, 131072, 1, 655371, 131072, 1, 720907, 131072, 7, 786443, 131072, 1, 458764, 131072, 1, 524300, 131072, 1, 589836, 131072, 1, 655372, 131072, 1, 720908, 131072, 7, 786444, 131072, 1, 458765, 131072, 1, 524301, 131072, 1, 589837, 131072, 1, 655373, 131072, 1, 720909, 131072, 7, 786445, 131072, 1, 917501, 131072, 1, 983037, 131072, 1, 1048573, 131072, 1, 1114109, 131072, 1, 1114110, 131072, 1, 1114111, 131072, 1, 1048576, 131072, 1, 1048577, 131072, 1, 1048578, 131072, 1, 1048579, 131072, 1, 1048580, 131072, 1, 1048581, 131072, 1, 1048582, 131072, 1, 851975, 131072, 1, 917511, 131072, 1, 983047, 131072, 1, 1048583, 131072, 1, 851976, 131072, 1, 917512, 131072, 1, 983048, 131072, 1, 1048584, 131072, 1, 851977, 131072, 1, 917513, 131072, 1, 983049, 131072, 1, 1048585, 131072, 1, 851978, 131072, 1, 917514, 131072, 1, 983050, 131072, 1, 1048586, 131072, 1, 851979, 131072, 1, 917515, 131072, 1, 983051, 131072, 1, 1048587, 131072, 1, 851980, 131072, 1, 917516, 131072, 1, 983052, 131072, 1, 1048588, 131072, 1, 851981, 131072, 1, 917517, 131072, 1, 983053, 131072, 1, 1048589, 131072, 1, 327694, 131072, 7, 393230, 131072, 1, 458766, 131072, 1, 524302, 131072, 1, 589838, 131072, 1, 655374, 131072, 1, 720910, 131072, 7, 786446, 131072, 1, 851982, 131072, 1, 917518, 131072, 1, 983054, 131072, 1, 1048590, 131072, 1, 327695, 131072, 7, 393231, 131072, 1, 458767, 131072, 1, 524303, 131072, 1, 589839, 131072, 1, 655375, 131072, 1, 720911, 131072, 7, 786447, 131072, 1, 851983, 131072, 1, 917519, 131072, 1, 983055, 131072, 1, 1048591, 131072, 1, 327696, 131072, 7, 393232, 131072, 1, 458768, 131072, 1, 524304, 131072, 1, 589840, 131072, 1, 655376, 131072, 1, 720912, 131072, 7, 786448, 131072, 1, 851984, 131072, 1, 917520, 131072, 1, 983056, 131072, 1, 1048592, 131072, 1, 327697, 131072, 7, 393233, 131072, 1, 458769, 131072, 1, 524305, 131072, 1, 589841, 131072, 1, 655377, 131072, 1, 720913, 131072, 7, 786449, 131072, 1, 851985, 131072, 1, 917521, 131072, 1, 983057, 131072, 1, 1048593, 131072, 1, 327698, 131072, 7, 393234, 131072, 1, 458770, 131072, 1, 524306, 131072, 1, 589842, 131072, 1, 655378, 131072, 1, 720914, 131072, 7, 786450, 131072, 1, 851986, 131072, 1, 917522, 131072, 1, 983058, 131072, 1, 1048594, 131072, 1, 327699, 131072, 7, 393235, 131072, 1, 458771, 131072, 1, 524307, 131072, 1, 589843, 131072, 1, 655379, 131072, 1, 720915, 131072, 7, 786451, 131072, 1, 851987, 131072, 1, 917523, 131072, 1, 983059, 131072, 1, 1048595, 131072, 1, 327700, 131072, 7, 393236, 131072, 1, 458772, 131072, 1, 524308, 131072, 1, 589844, 131072, 1, 655380, 131072, 1, 720916, 131072, 7, 786452, 131072, 1, 851988, 131072, 1, 917524, 131072, 1, 983060, 131072, 1, 1048596, 131072, 1, 327701, 131072, 7, 393237, 131072, 1, 458773, 0, 7, 524309, 131072, 6, 589845, 131072, 6, 655381, 131072, 6, 720917, 131072, 2, 786453, 131072, 6, 851989, 131072, 6, 917525, 131072, 6, 983061, 0, 3, 1048597, 131072, 1, 327702, 131072, 4, 393238, 131072, 1, 458774, 131072, 7, 524310, 131072, 1, 589846, 131072, 1, 655382, 131072, 1, 720918, 131072, 1, 786454, 131072, 1, 851990, 131072, 1, 917526, 131072, 1, 983062, 131072, 7, 1048598, 131072, 1, 327703, 131072, 7, 393239, 131072, 1, 458775, 131072, 7, 524311, 131072, 1, 589847, 131072, 1, 655383, 131072, 1, 720919, 131072, 1, 786455, 131072, 1, 851991, 131072, 1, 917527, 131072, 1, 983063, 131072, 7, 1048599, 131072, 1, 327704, 196608, 1, 393240, 131072, 6, 458776, 131072, 4, 524312, 131072, 1, 589848, 131072, 1, 655384, 131072, 1, 720920, 131072, 1, 786456, 131072, 1, 851992, 131072, 1, 917528, 131072, 1, 983064, 131072, 7, 1048600, 131072, 1, 327705, 131072, 7, 393241, 131072, 1, 458777, 131072, 7, 524313, 131072, 1, 589849, 131072, 1, 655385, 131072, 1, 720921, 131072, 1, 786457, 131072, 1, 851993, 131072, 1, 917529, 131072, 1, 983065, 131072, 7, 1048601, 131072, 1, 327706, 196608, 1, 393242, 131072, 6, 458778, 131072, 4, 524314, 131072, 1, 589850, 131072, 1, 655386, 131072, 1, 720922, 131072, 1, 786458, 131072, 1, 851994, 131072, 1, 917530, 131072, 1, 983066, 131072, 7, 1048602, 131072, 1, 327707, 131072, 7, 393243, 131072, 1, 458779, 196608, 5, 524315, 131072, 6, 589851, 131072, 6, 655387, 131072, 6, 720923, 131072, 6, 786459, 131072, 6, 851995, 131072, 6, 917531, 131072, 6, 983067, 65536, 1, 1048603, 131072, 1, 327708, 131072, 7, 393244, 131072, 1, 458780, 131072, 1, 524316, 131072, 1, 589852, 131072, 1, 655388, 131072, 0, 720924, 131072, 0, 786460, 131072, 0, 851996, 131072, 1, 917532, 131072, 1, 983068, 131072, 1, 1048604, 131072, 1, 262158, 262144, 1, 262159, 262144, 1, 262160, 262144, 1, 262161, 262144, 1, 262162, 262144, 1, 262163, 262144, 1, 262164, 262144, 1, 262165, 262144, 1, 262166, 0, 0, 262167, 262144, 1, 262168, 262144, 7, 262169, 262144, 1, 262170, 262144, 7, 262171, 262144, 1, 262172, 262144, 1, -393219, 196608, 2, -327683, 196608, 2, -262147, 196608, 2, -196611, 196608, 2, -393218, 196608, 2, -327682, 196608, 2, -262146, 196608, 2, -196610, 196608, 2, -393217, 196608, 2, -327681, 0, 5, -262145, 65536, 7, -196609, 65536, 7, -458752, 196608, 2, -393216, 0, 6, -327680, 196608, 2, -262144, 196608, 2, -458751, 196608, 2, -393215, 0, 6, -327679, 196608, 2, -262143, 196608, 2, -458750, 196608, 2, -393214, 0, 6, -327678, 196608, 2, -262142, 196608, 2, -458749, 196608, 2, -393213, 0, 6, -327677, 196608, 2, -262141, 196608, 2, -458748, 196608, 2, -393212, 0, 6, -327676, 196608, 2, -262140, 196608, 2, -458747, 196608, 2, -393211, 0, 4, -327675, 65536, 7, -262139, 65536, 7, -458746, 196608, 2, -393210, 196608, 7, -327674, 196608, 7, -262138, 196608, 7, -458745, 196608, 2, -393209, 0, 5, -327673, 65536, 7, -262137, 65536, 7, -458744, 196608, 2, -393208, 0, 6, -327672, 196608, 7, -262136, 196608, 7, -458743, 196608, 2, -393207, 0, 6, -327671, 196608, 7, -262135, 196608, 2, -458742, 196608, 2, -393206, 0, 6, -327670, 196608, 7, -262134, 196608, 2, -458741, 196608, 2, -393205, 0, 6, -327669, 196608, 7, -262133, 196608, 2, -458740, 196608, 2, -393204, 0, 6, -327668, 196608, 7, -262132, 196608, 2, -458739, 196608, 2, -393203, 0, 6, -327667, 196608, 7, -262131, 196608, 2, -458738, 196608, 2, -393202, 0, 6, -327666, 196608, 7, -262130, 196608, 2, -458737, 196608, 2, -393201, 0, 6, -327665, 196608, 7, -262129, 196608, 2, -458736, 196608, 2, -393200, 0, 6, -327664, 196608, 7, -262128, 196608, 7, -458735, 196608, 2, -393199, 0, 6, -327663, 196608, 7, -262127, 196608, 7, -458734, 196608, 2, -393198, 0, 6, -327662, 196608, 7, -262126, 196608, 2, -458733, 196608, 2, -393197, 0, 6, -327661, 196608, 7, -262125, 196608, 2, -458732, 196608, 2, -393196, 0, 6, -327660, 196608, 7, -262124, 196608, 2, -458731, 196608, 2, -393195, 0, 6, -327659, 196608, 7, -262123, 196608, 2, -458730, 196608, 2, -393194, 0, 6, -327658, 196608, 7, -262122, 196608, 2, -458729, 196608, 2, -393193, 0, 6, -327657, 196608, 7, -262121, 196608, 2, -458728, 196608, 2, -393192, 196608, 6, -327656, 65536, 7, -262120, 65536, 7, -458727, 196608, 2, -393191, 0, 6, -327655, 196608, 2, -262119, 196608, 2, -458726, 196608, 2, -393190, 0, 4, -327654, 65536, 7, -262118, 65536, 7, -458725, 196608, 2, -393189, 196608, 2, -327653, 196608, 2, -262117, 196608, 2, -458724, 196608, 2, -393188, 196608, 2, -327652, 196608, 2, -262116, 196608, 2, -196594, 0, 6, -131058, 196608, 2, -65522, 196608, 2, 14, 196608, 2, 65550, 196608, 2, 131086, 196608, 2, 196622, 196608, 2, -196593, 0, 6, -131057, 196608, 2, -65521, 196608, 2, 15, 196608, 2, 65551, 196608, 2, 131087, 196608, 2, 196623, 196608, 2, -196592, 0, 6, -131056, 196608, 2, -65520, 196608, 2, 16, 196608, 2, 65552, 196608, 2, 131088, 196608, 2, 196624, 196608, 2, -196591, 0, 6, -131055, 196608, 2, -65519, 196608, 2, 17, 196608, 2, 65553, 196608, 2, 131089, 196608, 2, 196625, 196608, 2, -196590, 0, 6, -131054, 196608, 2, -65518, 196608, 2, 18, 196608, 2, 65554, 196608, 2, 131090, 196608, 2, 196626, 196608, 2, -196589, 0, 6, -131053, 196608, 2, -65517, 196608, 2, 19, 196608, 2, 65555, 196608, 2, 131091, 196608, 2, 196627, 196608, 2, -196588, 0, 6, -131052, 196608, 2, -65516, 196608, 2, 20, 196608, 2, 65556, 196608, 2, 131092, 196608, 2, 196628, 196608, 2, -196587, 0, 6, -131051, 196608, 2, -65515, 196608, 2, 21, 196608, 2, 65557, 196608, 2, 131093, 196608, 2, 196629, 196608, 2, -196586, 0, 4, -131050, 65536, 7, -65514, 65536, 7, 22, 65536, 7, 65558, 65536, 7, 131094, 65536, 7, 196630, 65536, 7, -196585, 196608, 2, -131049, 196608, 2, -65513, 196608, 2, 23, 196608, 2, 65559, 196608, 2, 131095, 196608, 2, 196631, 196608, 2, -196584, 65536, 7, -131048, 65536, 7, -65512, 65536, 7, 24, 65536, 7, 65560, 65536, 7, 131096, 65536, 7, 196632, 65536, 7, -196583, 196608, 2, -131047, 196608, 2, -65511, 196608, 2, 25, 196608, 2, 65561, 196608, 7, 131097, 196608, 2, 196633, 196608, 2, -196582, 65536, 7, -131046, 65536, 7, -65510, 65536, 7, 26, 65536, 7, 65562, 65536, 7, 131098, 65536, 7, 196634, 65536, 7, -196581, 196608, 2, -131045, 196608, 2, -65509, 196608, 2, 27, 196608, 2, 65563, 196608, 2, 131099, 196608, 2, 196635, 196608, 2, -196580, 196608, 2, -131044, 196608, 2, -65508, 196608, 2, 28, 196608, 2, 65564, 196608, 2, 131100, 196608, 2, 196636, 196608, 2, 458750, 131072, 0, 458751, 131072, 1, 393216, 131072, 1, 393217, 131072, 1, 393218, 131072, 6, 393219, 131072, 1, 393220, 131072, 1, 393221, 131072, 1, 393222, 131072, 0, 524286, 131072, 1, 589822, 131072, 1, 655358, 131072, 1, 720894, 131072, 1, 786430, 131072, 1, 851966, 131072, 1, 917502, 131072, 1, 983038, 131072, 1, 1048574, 131072, 1, 524287, 0, 7, 589823, 131072, 6, 655359, 131072, 6, 720895, 131072, 6, 786431, 131072, 6, 851967, 131072, 6, 917503, 131072, 6, 983039, 131072, 6, 1048575, 0, 3, 458752, 131072, 7, 524288, 131072, 1, 589824, 131072, 1, 655360, 131072, 1, 720896, 131072, 1, 786432, 131072, 1, 851968, 131072, 1, 917504, 131072, 1, 983040, 131072, 7, 458753, 131072, 7, 524289, 131072, 1, 589825, 131072, 1, 655361, 131072, 1, 720897, 131072, 1, 786433, 131072, 1, 851969, 131072, 1, 917505, 131072, 1, 983041, 131072, 7, 458754, 131072, 4, 524290, 131072, 1, 589826, 131072, 1, 655362, 131072, 1, 720898, 131072, 1, 786434, 131072, 1, 851970, 131072, 1, 917506, 131072, 1, 983042, 131072, 7, 458755, 131072, 7, 524291, 131072, 1, 589827, 131072, 1, 655363, 131072, 1, 720899, 131072, 1, 786435, 131072, 1, 851971, 131072, 1, 917507, 131072, 1, 983043, 131072, 7, 458756, 131072, 7, 524292, 131072, 1, 589828, 131072, 1, 655364, 131072, 1, 720900, 131072, 1, 786436, 131072, 1, 851972, 131072, 1, 917508, 131072, 1, 983044, 131072, 7, 458757, 196608, 5, 524293, 131072, 6, 589829, 131072, 6, 655365, 131072, 6, 720901, 131072, 5, 786437, 131072, 6, 851973, 131072, 6, 917509, 131072, 6, 983045, 65536, 1, 458758, 131072, 1, 524294, 131072, 1, 589830, 131072, 1, 655366, 131072, 1, 720902, 131072, 7, 786438, 131072, 1, 851974, 131072, 1, 917510, 131072, 1, 983046, 131072, 1)

[node name="Player" parent="." instance=ExtResource("1_2iwrv")]
position = Vector2(-53, 508)

[node name="LeftWall" type="Area2D" parent="."]
position = Vector2(-350, 200)
collision_layer = 16
collision_mask = 14
script = ExtResource("3_heb4w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource("RectangleShape2D_8apu8")
debug_color = Color(0, 0.6, 0.701961, 0.482353)

[node name="RightWall" type="Area2D" parent="."]
position = Vector2(983, 200)
collision_layer = 16
collision_mask = 14
script = ExtResource("3_heb4w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
shape = SubResource("RectangleShape2D_8apu8")

[node name="TopWall" type="Area2D" parent="."]
position = Vector2(316, -350)
collision_layer = 16
collision_mask = 14
script = ExtResource("3_heb4w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
shape = SubResource("RectangleShape2D_4edbg")

[node name="BottomWall" type="Area2D" parent="."]
position = Vector2(316, 750)
collision_layer = 16
collision_mask = 14
script = ExtResource("3_heb4w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
shape = SubResource("RectangleShape2D_4edbg")

[node name="SlimeSpawner" type="Node2D" parent="."]
script = ExtResource("5_o7ynb")
slime_scene = ExtResource("4_5kqvr")

[node name="Timer" type="Timer" parent="SlimeSpawner"]
autostart = true

[node name="Marker2D" type="Marker2D" parent="SlimeSpawner"]
position = Vector2(-348, -865)

[node name="Marker2D2" type="Marker2D" parent="SlimeSpawner"]
position = Vector2(3674, -867)

[node name="Marker2D3" type="Marker2D" parent="SlimeSpawner"]
position = Vector2(3685, 191)

[node name="Marker2D4" type="Marker2D" parent="SlimeSpawner"]
position = Vector2(3680, 2147)

[node name="Marker2D5" type="Marker2D" parent="SlimeSpawner"]
position = Vector2(1836, 2154)

[node name="Marker2D6" type="Marker2D" parent="SlimeSpawner"]
position = Vector2(-320, 2113)

[connection signal="timeout" from="SlimeSpawner/Timer" to="SlimeSpawner" method="_on_timer_timeout"]
